# fabrique

./: CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: ci.yml  publish.yml
.sqlx/: query-2b5928b192f044e8f3e5784740b8a84dc39c53bb29cda46a338519ce1ee2e163.json
fabrique/: Cargo.toml  LICENSE
fabrique-core/: Cargo.toml
fabrique-core/src/: lib.rs
fabrique-derive/: Cargo.toml
fabrique-derive/src/: analysis.rs  codegen.rs  error.rs  factory.rs  lib.rs  persistable.rs
fabrique-derive/src/factory/: analysis.rs  codegen.rs
fabrique-derive/src/persistable/: codegen.rs
fabrique-derive/tests/: test.rs  ui.rs
fabrique-derive/tests/ui/: derive_on_enum.rs  derive_on_enum.stderr  derive_on_tuple_struct.rs  derive_on_tuple_struct.stderr  derive_on_union.rs  derive_on_union.stderr  derive_on_unit_struct.rs  derive_on_unit_struct.stderr  invalid_attribute_name.rs  invalid_attribute_name.stderr  invalid_primary_key_type.rs  invalid_primary_key_type.stderr  invalid_referenced_key_type.rs  invalid_referenced_key_type.stderr  invalid_relation_attribute_type.rs  invalid_relation_attribute_type.stderr  invalid_relation_type.rs  invalid_relation_type.stderr  invalid_string_literal_in_referenced_key.rs  invalid_string_literal_in_referenced_key.stderr  invalid_string_literal_in_relation.rs  invalid_string_literal_in_relation.stderr  missing_referenced_key.rs  missing_referenced_key.stderr  typo_in_attribute.rs  typo_in_attribute.stderr
fabrique-derive/tests/ui/persistable/fail/: derive_persistable_on_unit_struct.rs  derive_persistable_on_unit_struct.stderr
fabrique-derive/tests/ui/persistable/pass/: derive_persistable.rs
fabrique/src/: lib.rs
fabrique/tests/: integration_test.rs  persistable_integration_test.rs
migrations/: 00001_initial_schema.sql
