[package]
name = "fabrique-derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for generating factory structs"
license = "MIT"
repository = "https://github.com/robinstraub/fabrique"
homepage = "https://github.com/robinstraub/fabrique"
documentation = "https://docs.rs/fabrique-derive"

[lib]
proc-macro = true

[dependencies]
fabrique-core = { path = "../fabrique-core", version = "0.1.0" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
thiserror = "2.0"
