[package]
name = "fabrique-derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for generating factory structs"
license = "MIT"
repository = "https://github.com/robinstraub/fabrique"
homepage = "https://github.com/robinstraub/fabrique"
documentation = "https://docs.rs/fabrique-derive"

[lib]
proc-macro = true

[features]
default = []

# Generate Persistable trait implementations using SQLx
sqlx = ["dep:sqlx"]

[dependencies]
darling = "0.21"
fabrique-core = { path = "../fabrique-core", version = "0.1.0" }
proc-macro2 = "1.0"
quote = "1.0"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
], optional = true }
syn = { version = "2.0", features = ["extra-traits"] }
thiserror = "2.0"

[dev-dependencies]
fabrique = { path = "../fabrique", features = ["sqlx"] }
trybuild = "1.0"
uuid = "1"
