[package]
name = "fabrique"
version = "0.1.0"
edition = "2024"
description = "Laravel/Eloquent-like factories for Rust structs"
license = "MIT"
repository = "https://github.com/robinstraub/fabrique"
homepage = "https://github.com/robinstraub/fabrique"
documentation = "https://docs.rs/fabrique"

[features]
default = []

# Enables SQLx-based persistence layer implementation
sqlx = ["fabrique-derive/sqlx"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

[dependencies]
fabrique-core = { path = "../fabrique-core", version = "0.1.0" }
fabrique-derive = { path = "../fabrique-derive", version = "0.1.0" }
